--- a/dom/timer/timer.html
+++ b/dom/timer/timer.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="timer.css">
-    <script src="timer-dom.js"></script>
+    
     <title>Document</title>
 </head>
 <body>
     <main id="timer">
-        <p>0:00</p>
+        <p><span id="seconds">00:00</span></p>
         <div class=timer-buttons>
-            <button>Start</button>
-            <button>Stop</button>
-            <button>Reset</button>
+            <button id="start" onClick="myTimer = setInterval(counter, 1000)">Start</button>
+            <button id="stop" onClick="clearInterval(myTimer)">Stop</button>
+            <button id="reset" onClick="clearSeconds();">Reset</button>
         </div>
     </main>
 </body>
+<script src="timer-dom.js"></script>
 </html>
